removes App.css, fixes height overflow issue

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@ body { overflow: hidden; }
    &-wrapper {
       display: flex;
       flex-direction: column;
+      height: 100%;
    }
 
    &-header {
@@ -21,7 +22,8 @@ body { overflow: hidden; }
    &-content {
       flex: 1 1 auto;
       position: relative;
-      overflow-y: auto;
+      overflow: auto;
+
    }
 }
 
@@ -59,7 +61,7 @@ body { overflow: hidden; }
 }
 
 .main-img:hover {
-  opacity: 0; 
+  opacity: 0;
   // z-index: 0;
 
 }
@@ -88,17 +90,17 @@ body { overflow: hidden; }
   // opacity: 1;
 }
 
-.people-grid {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
+// .people-grid {
+//   display: flex;
+//   justify-content: space-evenly;
+//   flex-wrap: wrap;
+// }
 
 .person {
   font-size: 1.5rem;
   font-weight: bold;
   text-decoration: none;
-  color: black; 
+  color: black;
   text-align: center;
 }
 
